# HMM_cuda

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  clean_cmake.sh  constants_bw.h  hmmsr.cu  kernel_backward.cu  kernel_backward.h  kernel_bw.cu  kernel_bw.h  kernel_forward.cu  kernel_forward.h
unit_test/: '  CMakeLists.txt  test_backwd.cu  test_bw.cu  test_fwd.cu
unit_test/gmock/gmock-1.7.0/: CTestTestfile.cmake  Makefile  cmake_install.cmake
unit_test/gmock/gmock-1.7.0/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
